exports[`(.not).toHaveMethodFailureStatus > using axios > .not.toHaveMethodFailureStatus > fails when response have status code 420 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveMethodFailureStatus()</intensity>

Expected status code to not be 420 received:
  <red>420</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 420,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveMethodFailureStatus > using axios > .toHaveMethodFailureStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveMethodFailureStatus()</intensity>

Expected status code to be 420 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;
